== 0.0.3
* Implemented getting array of entities from instance (GET).
* Implemented getting a specific entity from its name/id (GET).
* Implemented creation of entities (POST).
* Implemented deletion of entities (DELETE).
* Added new class definition for post / put calls assistance. Helps with JSON generation.

== 0.0.2
* Implemented API call to get specific information from a sent message from it's given ID (GET).
* Intent specific API calls functional (GET).
* Changed description in gemspec.
* Change results to be returned as specific objects that inherit from the original class Result.
  Message, Intent, Entity, Expression are the specific wrappers for results.
* Made error check so that only specific results can be refreshed. Refreshable objects are ones that
  are directly returned from session calls.

== 0.0.1
* Implemented connection with wit.ai API and sending a text message (GET).